<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" 
  android:tag="Contact">
    <LinearLayout android:layout_width="match_parent" 
    	android:id="@+id/linearLayout1" 
    	android:layout_height="match_parent"
    	android:orientation="vertical">
		<EditText
    		android:id="@+id/name"
    		android:layout_height="wrap_content"
    		android:hint="@string/hintname"
    		android:inputType="textPersonName"
    		android:layout_width="fill_parent">
		</EditText>
<!--  		<EditText
    		android:id="@+id/company"
    		android:layout_height="wrap_content"
    		android:hint="@string/hintcompanyname"
    		android:layout_width="fill_parent">
		</EditText> -->
		<EditText
    		android:id="@+id/phoneNumber"
    		android:layout_height="wrap_content"
    		android:hint="@string/phonenumber"
    		android:inputType="phone"
    		android:layout_width="fill_parent">
		</EditText>
		<EditText
    		android:id="@+id/email"
    		android:layout_height="wrap_content"
    		android:hint="@string/email"
    		android:inputType="textEmailAddress"
    		android:layout_width="fill_parent">
		</EditText>
		<EditText
    		android:id="@+id/address"
    		android:layout_height="wrap_content"
    		android:hint="@string/address"
    		android:layout_width="fill_parent">
		</EditText>
		<EditText
    		android:id="@+id/address2"
    		android:layout_height="wrap_content"
    		android:hint="@string/address2"
    		android:layout_width="fill_parent">
		</EditText>
		<EditText
    		android:id="@+id/url"
    		android:layout_height="wrap_content"
    		android:hint="@string/website"
    		android:layout_width="fill_parent">
		</EditText>
		<Button android:text="@string/ok" android:id="@+id/ok" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
    </LinearLayout>
</ScrollView>
