<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout android:layout_height="match_parent" 
    	android:layout_width="wrap_content" 
    	android:id="@+id/linearLayout1" 
    	android:orientation="vertical">
        <EditText android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
        	android:id="@+id/eventTitle" 
        	android:hint="@string/event_title">
        </EditText>
        <TextView android:id="@+id/textView1" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:text="@string/event_start_date">
        </TextView>
        <DatePicker android:layout_height="wrap_content" 
        	android:id="@+id/eventStartDate" 
        	android:layout_width="wrap_content">
        </DatePicker>
        <TextView android:id="@+id/textView2" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:text="@string/event_start_time">
        </TextView>
        <TimePicker android:id="@+id/eventStartTime" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
        </TimePicker>

	    <TextView android:id="@+id/textView3" 
	    		android:layout_width="match_parent" 
	    		android:layout_height="match_parent" 
	    		android:text="@string/event_end_date">
	    </TextView>
        <DatePicker android:layout_height="wrap_content" 
        	android:id="@+id/eventEndDate" 
        	android:layout_width="wrap_content">
        </DatePicker>
        <TextView android:id="@+id/textView4" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:text="@string/event_end_time">
        </TextView>
        <TimePicker android:id="@+id/eventEndTime" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content">
        </TimePicker>
        <EditText android:layout_width="fill_parent"
        	android:layout_height="wrap_content" 
        	android:id="@+id/eventLocation" 
        	android:hint="@string/event_location">
        </EditText>
        <EditText android:layout_width="fill_parent" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/eventDescription" 
        	android:hint="@string/event_description">
        </EditText>
        <Button android:text="@string/ok" 
        		android:id="@+id/ok" 
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content">
        </Button>
        
    </LinearLayout>
</ScrollView>
